--- a/html/style.css
+++ b/html/style.css
@@ -136,6 +136,13 @@ html, body {
   align-items: center;
   position: relative;
   justify-content: left;
+  background: radial-gradient(circle, rgba(74, 94, 38, 0.684) 0%, rgba(61, 79, 31, 0.256) 100%);
+  padding: 5px;
+  height: 20px;
+  border-style: solid;
+  border-radius: 3px;
+  border-width: 0.1px;
+  border-color: rgb(134, 164, 77);
 }
 
 .disabled > .icon {
@@ -144,14 +151,21 @@ html, body {
   align-items: center;
   position: relative;
   justify-content: left;
+  background: radial-gradient(circle, rgba(133, 58, 59, 0.089) 0%, rgba(105,46,47, 0.177) 100%) ;
+  padding: 5px;
+  height: 20px;
+  border-style: solid;
+  border-radius: 3px;
+  border-width: 0.1px;
+  border-color: rgb(137, 60, 61);
 }
 
 .button:hover {
   transition: all 0.5s;
   background: radial-gradient(circle, rgba(74, 94, 38, 0.684) 0%, rgba(61, 79, 31, 0.256) 100%);
-  border-radius: 3px;
   border-style: solid;
-  border-width: 0.15rem;
+  border-radius: 3px;
+  border-width: 0.1px;
   border-color: rgb(134, 164, 77);
 }
 
@@ -191,7 +205,7 @@ html, body {
   cursor: not-allowed;
   border-style: solid;
   border-radius: 3px;
-   border-width: 0.15rem;
+  border-width: 0.15rem;
   border-color: rgb(137, 60, 61);
 }
 
